# turbobunny-example

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE.md  rustfmt.toml
src/: README.md  commands.rs  main.rs  routes.rs  service_base.rs
src/resources/: about.hbs  bootstrap-4.2.1.js  check.hbs  footer.hbs  header.hbs  list.hbs  search.xml
