[package]
name = "turbobunny"
version = "0.1.0"
authors = ["Ludum Ipsum <dev@ludumipsum.com>"]
edition = "2018"

[dependencies]
actix-web = "0.7.16"
clap = "2.32"
env_logger = "0.6"
failure = "0.1.3"
handlebars = "1.1.0"
listenfd = "0.3.3"
log = "0.4.6"
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.33"
